Front de Categorias de Artigo pronto

--- a/BlogPessoal/BlogPessoal.Tests/App.config
+++ b/BlogPessoal/BlogPessoal.Tests/App.config
@@ -14,9 +14,13 @@
 
 
   <connectionStrings>
-    <add name="BlogPessoalContexto" connectionString="Data Source=(localdb)\MSSQLLocalDb;
-	Database=BlogSimples;Trusted_Connection=true;"
+    <add name="BlogPessoalContexto" connectionString="Data Source=SAYRONI7\SQLEXPRESS;Initial Catalog=BlogSimples;
+                Integrated Security=True"
     providerName="System.Data.SqlClient" />
+
+    
+    <!-- <add name="BlogPessoalContexto" connectionString="Data Source=localhost;Initial Catalog=BlogSimples;Integrated Security=True;" providerName="System.Data.SqlClient" /> -->
+    
   </connectionStrings>
   
   <runtime>
