--- a/BlogPessoal/BlogPessoal.Web/Web.config
+++ b/BlogPessoal/BlogPessoal.Web/Web.config
@@ -63,9 +63,22 @@
   </entityFramework>
 
   <connectionStrings>
-    <add name="BlogPessoalContexto" connectionString="Data Source=(localdb)\MSSQLLocalDb;
-	Database=BlogSimples;Trusted_Connection=true;"
-    providerName="System.Data.SqlClient" />
+
+    <!-- 
+    <add name="BlogPessoalContexto" connectionString="Data Source=SAYRONI7\SQLEXPRESS;Initial Catalog=BlogSimples;
+                Integrated Security=True"
+    providerName="System.Data.SqlClient" />    
+     
+    connectionString="Server=localhost\SQLEXPRESS;Database=BWSDatabase;User Id=sa;Password=senha;"
+    
+    "Server=SAYRONI7\SQLEXPRESS;Database=BlogSimples;" providerName="System.Data.SqlClient"
+    
+        <add name="BlogPessoalContexto" connectionString="Server=SAYRONI7\SQLEXPRESS; Database=BlogSimples;User Id=sa;Password=5825;" />
+    -->
+
+    <add name="BlogPessoalContexto" connectionString="Data Source=SAYRONI7\SQLEXPRESS;Integrated Security=True;Persist Security Info=False;Initial Catalog=BlogSimples;" providerName="System.Data.SqlClient"/>
+
+
   </connectionStrings>
   
   
