--- a/BlogPessoal/BlogPessoal.Web/Web.Debug.config
+++ b/BlogPessoal/BlogPessoal.Web/Web.Debug.config
@@ -14,6 +14,11 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+
+  <add name="BlogPessoalContexto" connectionString="Data Source=SAYRONI7\SQLEXPRESS;Initial Catalog=BlogSimples;
+                Integrated Security=True"
+providerName="System.Data.SqlClient" />
+  
   <system.web>
     <!--
       In the example below, the "Replace" transform will replace the entire
