--- a/BlogPessoal/BlogPessoal.Tests/App.config
+++ b/BlogPessoal/BlogPessoal.Tests/App.config
@@ -14,9 +14,7 @@
 
 
   <connectionStrings>
-    <add name="BlogPessoalContexto" connectionString="Data Source=SAYRONI7\SQLEXPRESS;Initial Catalog=BlogSimples;
-                Integrated Security=True"
-    providerName="System.Data.SqlClient" />
+    <add name="BlogPessoalContexto" connectionString="Data Source=SAYRONI7\SQLEXPRESS;Initial Catalog=BlogSimples;                 Integrated Security=True" providerName="System.Data.SqlClient" />
 
     
     <!-- <add name="BlogPessoalContexto" connectionString="Data Source=localhost;Initial Catalog=BlogSimples;Integrated Security=True;" providerName="System.Data.SqlClient" /> -->
@@ -36,6 +34,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
