--- a/BlogPessoal/BlogPessoal.Web/Web.config
+++ b/BlogPessoal/BlogPessoal.Web/Web.config
@@ -48,6 +48,10 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -76,7 +80,7 @@
         <add name="BlogPessoalContexto" connectionString="Server=SAYRONI7\SQLEXPRESS; Database=BlogSimples;User Id=sa;Password=5825;" />
     -->
 
-    <add name="BlogPessoalContexto" connectionString="Data Source=SAYRONI7\SQLEXPRESS;Integrated Security=True;Persist Security Info=False;Initial Catalog=BlogSimples;" providerName="System.Data.SqlClient"/>
+    <add name="BlogPessoalContexto" connectionString="Data Source=SAYRONI7\SQLEXPRESS;Integrated Security=True;Persist Security Info=False;Initial Catalog=BlogSimples;" providerName="System.Data.SqlClient" />
 
 
   </connectionStrings>
